--- a/_quarto.yml
+++ b/_quarto.yml
@@ -75,7 +75,7 @@ website:
           - C2-L11-Ex2.qmd
           - C2-L12.qmd
           - C2-L12-Ex1.qmd
-        - section: "3. Techniques and Models"
+        - section: "3. Mixture Models"
           contents:
           - C3-L01.qmd
           - C3-L01-Ex1.qmd
