--- a/_quarto.yml
+++ b/_quarto.yml
@@ -105,6 +105,7 @@ website:
 bibliography: references.bib
 format:
   html:
+    from: "markdown+emoji"
     lightbox: 
       match: auto
       effect: fade
