added some assignments

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -78,8 +78,18 @@ website:
         - section: "3. Mixture Models"
           contents:
           - C3-L01.qmd
-          - C3-L01-Ex1.qmd
-          - C3-L01-Ex2H.qmd
+          - C3-L01-Ex1-Basic-Definitions.qmd
+          - C3-L01-Ex2-Gaussian-mixtures.qmd
+          - C3-L01-Ex3-Zero-Inflated-distribution.qmd
+          - C3-L01-Ex4-Def-mixture-models.qmd
+          - C3-L01-Ex5.qmd # Simulating from a Mixture Model -  Poisson
+          - C3-L01-Ex6.qmd # Likelihood function for mixture models - exponential
+          - C3-L02.qmd
+          - C3-L02-Ex1.qmd # The EM algorithm for zero-inflated mixtures - netsize.csv
+          - C3-L02-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
+          - C3-L03.qmd
+          - C3-L04.qmd
+          - C3-L05.qmd
         - section: "4. Time series Models"
           contents:
           - C4-L01.qmd
