--- a/_quarto.yml
+++ b/_quarto.yml
@@ -85,7 +85,7 @@ website:
           - C3-L01-Ex5.qmd # Simulating from a Mixture Model -  Poisson
           - C3-L01-Ex6.qmd # Likelihood function for mixture models - exponential
           - C3-L02.qmd
-          - C3-L02-Ex1.qmd # The EM algorithm for zero-inflated mixtures - netsize.csv
+          - C3-L02-Ex1.qmd # The EM algorithm for zero-inflated mixtures - nestsize.csv
           - C3-L02-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
           - C3-L03.qmd
           - C3-L04.qmd
