material for course 4 on times series analysis

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "diagonalization",
         "Fineti",
-        "Lindley"
+        "Lindley",
+        "parctionars"
     ]
 }
