--- a/_quarto.yml
+++ b/_quarto.yml
@@ -88,11 +88,27 @@ website:
           - C3-L02-Ex1.qmd # The EM algorithm for zero-inflated mixtures - nestsize.csv
           - C3-L02-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
           - C3-L03.qmd
+          - C3-L03-Ex1.qmd # The MCMC algorithm for zero-inflated mixtures - nestsize.csv
+          - C3-L03-Ex2.qmd # The MCMC algorithm for Mixture Models - fuses.csv          
           - C3-L04.qmd
+          - C3-L04-Ex1.qmd
+          - C3-L04-Ex2.qmd
+          - C3-L04-Ex3.qmd         
           - C3-L05.qmd
+          - C3-L05-Ex1.qmd
+          - C3-L05-Ex2.qmd
+          - C3-L05-Ex3.qmd
+          - C3-L05-Ex4.qmd
+          - C3-L05-Ex5.qmd      
         - section: "4. Time series Models"
           contents:
+          - C4-L00.qmd
           - C4-L01.qmd
+          - C4-L02.qmd
+          - C4-L03.qmd
+          - C4-L04.qmd
+          - C4-L05.qmd
+          - C4-L06.qmd
         - section: "5. Capstone Project"
           contents:
           - C5-L01.qmd
