--- a/_quarto.yml
+++ b/_quarto.yml
@@ -132,6 +132,11 @@ bibliography: references.bib
 format:
   html:
     from: "markdown+emoji"
+    html-math-method: katex
+    code-fold: true
+    code-copy: true
+    code-tools: true
+
     lightbox: 
       match: auto
       effect: fade
