--- a/_quarto.yml
+++ b/_quarto.yml
@@ -133,9 +133,9 @@ format:
   html:
     from: "markdown+emoji"
     html-math-method: katex
-    code-fold: true
-    code-copy: true
-    code-tools: true
+    #code-fold: true
+    #code-copy: true
+    #code-tools: true
 
     lightbox: 
       match: auto
