--- a/_quarto.yml
+++ b/_quarto.yml
@@ -132,10 +132,11 @@ bibliography: references.bib
 format:
   html:
     from: "markdown+emoji"
+    number-sections: true
     html-math-method: katex
-    #code-fold: true
-    #code-copy: true
-    #code-tools: true
+    code-fold: true
+    code-tools: true
+
 
     lightbox: 
       match: auto
