--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,12 +2,12 @@ project:
   type: website
   preview:
     port: 4200
-  output-dir: _site
+  output-dir: docs
 
 highlight-style: a11y
 
 website:
-  title: "Bayesian Statsistics"
+  title: "Bayesian Statistics"
   sidebar:
       style: "docked"
       search: true
