removed epub target from default build

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -138,8 +138,9 @@ format:
   #   include-after-body: 
   #     - text: |
   #         \printindex
-  epub:
-    cover-image: cover.png
+  # epub is too big for GitHub, so we need to add it as a local build profile.
+  # epub:
+  #   cover-image: cover.png
   html: 
     from: "markdown+emoji"
     number-sections: true
