big files ignored

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ __pycache__/
 _freeze/
 _site/
 _book_advanced/*
+#these files are too big to commit
+docs/Bayesian-Statistics.pdf
+docs/Bayesian-Statistics.epub
