unfolding the code

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -182,34 +182,38 @@ format:
   # epub:
   #   cover-image: cover.png
   html: 
-    fig-caption: Notes about ... Bayesian Statistics
-    title-block-banner: images/banner_deep.jpg
-    #bibliography: bibliography.bib
+    css: styles.css
+    theme:
+      light: [cosmo, theme.scss]
+      dark: [cosmo, theme-dark.scss]
+    include-after-body: js.html
     from: "markdown+emoji"
+
+    toc: true
+    toc_float: true
+    respect-user-color-scheme: true
+
+    grid:
+      sidebar-width: 250px
+      body-width: 900px
+      margin-width: 300px    
+
+    title-block-banner: images/banner_deep.jpg
+    fig-caption: Notes about ... Bayesian Statistics
+    #bibliography: bibliography.bib
     number-sections: true
     html-math-method: katex
-    code-fold: true
+    code-fold: false
     code-tools: true
+    code-copy: true
+    code-overflow: wrap
+
     lightbox: 
       match: auto
       effect: fade
       desc-position: bottom
       loop: true
       css-class: "my-css-class"
-    respect-user-color-scheme: true
-    toc: true
-    toc_float: true
-    theme:
-      light: [cosmo, theme.scss]
-      dark: [cosmo, theme-dark.scss]
-    code-copy: true
-    code-overflow: wrap
-    css: styles.css
-    include-after-body: js.html
-    grid:
-      sidebar-width: 250px
-      body-width: 900px
-      margin-width: 300px    
     sidebar:
         style: "docked"
         search: true
