--- a/_quarto.yml
+++ b/_quarto.yml
@@ -117,9 +117,9 @@ book:
       - A10.qmd
       - A11.qmd
       - A12.qmd
+      - A13.qmd
       - references.qmd
   #   - summary.qmd
-
 
 format:
   pdf:
