--- a/_quarto.yml
+++ b/_quarto.yml
@@ -118,6 +118,7 @@ book:
       - A11.qmd
       - A12.qmd
       - A13.qmd
+      - A14.qmd
       - references.qmd
   #   - summary.qmd
 
@@ -345,6 +346,8 @@ format:
             - A10.qmd
             - A11.qmd
             - A12.qmd
+            - A13.qmd
+            - A14.qmd
             - summary.qmd
 
 bibliography: references.bib
