--- a/_quarto.yml
+++ b/_quarto.yml
@@ -119,6 +119,7 @@ book:
       - A12.qmd
       - A13.qmd
       - A14.qmd
+      - A15.qmd
       - references.qmd
   #   - summary.qmd
 
@@ -348,6 +349,7 @@ format:
             - A12.qmd
             - A13.qmd
             - A14.qmd
+            - A15.qmd
             - summary.qmd
 
 bibliography: references.bib
