added more material on Bayesian AR(p) inference

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -101,6 +101,8 @@ book:
       - C4-L03.qmd
       - C4-L04.qmd
       - C4-L05.qmd
+      - C4-L05-Ex1.qmd
+      - C4-L05-Ex2.qmd
       - C4-L06.qmd
       - C4-L07.qmd
       - C4-L08.qmd
