more course 5 notes

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -110,6 +110,7 @@ book:
       - C4-L10.qmd
       - C4-L11.qmd    
       - C5-L01.qmd  
+      - C5-L01-Ex1.qmd
       - A01.qmd
       - A02.qmd
       - A03.qmd
