--- a/_quarto.yml
+++ b/_quarto.yml
@@ -113,6 +113,7 @@ book:
       - C5-L01-Ex1.qmd
       - C5-L01-Ex2.qmd
       - C5-L02.qmd  
+      - C5-L03.qmd 
       - A01.qmd
       - A02.qmd
       - A03.qmd
@@ -341,7 +342,11 @@ format:
             - C4-L11.qmd      
           - section: "5. Capstone Project"
             contents:
-            - C5-L01.qmd
+            - C5-L01.qmd  
+            - C5-L01-Ex1.qmd
+            - C5-L01-Ex2.qmd
+            - C5-L02.qmd  
+            - C5-L03.qmd 
           - section: "6. Appendices"
             contents:
             - A01.qmd
