--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,117 +3,138 @@ project:
   preview:
     port: 4200
   output-dir: docs
+  
 
 book:
+  page-footer: 
+    background: light
+    left: "Copyright 2025, Oren Bochman" 
+    right: 
+      - icon: github
+        href: https://github.com/
+      - icon: twitter 
+        href: https://twitter.com/ 
+
   title: "Bayesian Statistics"
   chapters:
-  #   - about.qmd
+      - about.qmd
       - index.qmd
       - intro.qmd
-      - C1-L01.qmd
-      - C1-L01-Ex1.qmd
-      - C1-L02.qmd
-      - C1-L02-Ex1.qmd
-      - C1-L02-Ex2.qmd
-      - C1-L03.qmd
-      - C1-L03-Ex1.qmd
-      - C1-L03-Ex2.qmd    
-      - C1-L04.qmd
-      - C1-L04-Ex1.qmd
-      - C1-L05.qmd
-      - C1-L05-Ex1.qmd
-      - C1-L05-Ex2.qmd
-      - C1-L06.qmd
-      - C1-L06-Ex1.qmd
-      - C1-L07.qmd
-      - C1-L07-Ex1.qmd    
-      - C1-L08.qmd
-      - C1-L08-Ex1.qmd    
-      - C1-L08-Ex2.qmd
-      - C1-L09.qmd
-      - C1-L09-Ex1.qmd    
-      - C1-L10.qmd
-      - C1-L10-Ex1.qmd    
-      - C1-L11.qmd
-      - C1-L11-Ex1.qmd  
-      - C1-L12.qmd
-      - C1-L12-Ex1.qmd    
-      - C1-L12-Ex2.qmd
-      - C2-L01.qmd
-      - C2-L02.qmd
-      - C2-L03.qmd
-      - C2-L04.qmd
-      - C2-L04-Ex1.qmd
-      - C2-L05.qmd
-      - C2-L05-Ex1.qmd
-      - C2-L06.qmd
-      - C2-L06-Ex1.qmd
-      - C2-L06-Ex2.qmd
-      - C2-L07.qmd
-      - C2-L07-Ex1.qmd
-      - C2-L07-Ex2.qmd    
-      - C2-L08.qmd
-      - C2-L08-Ex1.qmd
-      - C2-L08-Ex2.qmd
-      - C2-L09.qmd    
-      - C2-L09-Ex1.qmd
-      - C2-L10.qmd
-      - C2-L10-Ex1.qmd
-      - C2-L11.qmd
-      - C2-L11-Ex1.qmd
-      - C2-L11-Ex2.qmd
-      - C2-L12.qmd
-      - C2-L12-Ex1.qmd 
-      - C3-L01.qmd
-      - C3-L01-Ex1-Basic-Definitions.qmd
-      - C3-L01-Ex2-Gaussian-mixtures.qmd
-      - C3-L01-Ex3-Zero-Inflated-distribution.qmd
-      - C3-L01-Ex4-Def-mixture-models.qmd
-      - C3-L02.qmd
-      - C3-L02-Ex1.qmd
-      - C3-L02-Ex2.qmd 
-      - C3-L02-Ex3.qmd 
-      - C3-L02-Ex4.qmd 
-      - C3-L02-Ex5.qmd 
-      - C3-L02-Ex6.qmd 
-      - C3-L03.qmd
-      - C3-L03-Ex1.qmd # The EM algorithm for zero-inflated mixtures - nestsize.csv
-      - C3-L03-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
-      - C3-L04.qmd
-      - C3-L04-Ex1.qmd # The MCMC algorithm for zero-inflated mixtures - nestsize.csv
-      - C3-L04-Ex2.qmd # The MCMC algorithm for Mixture Models - fuses.csv          
-      - C3-L05.qmd
-      - C3-L06.qmd
-      - C3-L07.qmd
-      - C3-L07-Ex1.qmd
-      - C3-L07-Ex2.qmd
-      - C3-L07-Ex3.qmd         
-      - C3-L08.qmd
-      - C3-L08-Ex1.qmd
-      - C3-L09.qmd
-      - C3-L09-Ex1.qmd
-      - C3-L09-Ex2.qmd
-      - C3-L09-Ex3.qmd
-      - C3-L09-Ex4.qmd
-      - C4-L00.qmd
-      - C4-L01.qmd
-      - C4-L02.qmd
-      - C4-L03.qmd
-      - C4-L04.qmd
-      - C4-L05.qmd
-      - C4-L05-Ex1.qmd
-      - C4-L05-Ex2.qmd
-      - C4-L06.qmd
-      - C4-L07.qmd
-      - C4-L08.qmd
-      - C4-L09.qmd
-      - C4-L10.qmd
-      - C4-L11.qmd    
-      - C5-L01.qmd  
-      - C5-L01-Ex1.qmd
-      - C5-L01-Ex2.qmd
-      - C5-L02.qmd  
-      - C5-L03.qmd 
+      - part: "1. From Concept to Data Analysis"
+        chapters:
+          - C1-L01.qmd
+          - C1-L01-Ex1.qmd
+          - C1-L02.qmd
+          - C1-L02-Ex1.qmd
+          - C1-L02-Ex2.qmd
+          - C1-L03.qmd
+          - C1-L03-Ex1.qmd
+          - C1-L03-Ex2.qmd    
+          - C1-L04.qmd
+          - C1-L04-Ex1.qmd
+          - C1-L05.qmd
+          - C1-L05-Ex1.qmd
+          - C1-L05-Ex2.qmd
+          - C1-L06.qmd
+          - C1-L06-Ex1.qmd
+          - C1-L07.qmd
+          - C1-L07-Ex1.qmd    
+          - C1-L08.qmd
+          - C1-L08-Ex1.qmd    
+          - C1-L08-Ex2.qmd
+          - C1-L09.qmd
+          - C1-L09-Ex1.qmd    
+          - C1-L10.qmd
+          - C1-L10-Ex1.qmd    
+          - C1-L11.qmd
+          - C1-L11-Ex1.qmd  
+          - C1-L12.qmd
+          - C1-L12-Ex1.qmd    
+          - C1-L12-Ex2.qmd
+      - part: "2. Techniques and Models"  
+        chapters:
+          - C2-L01.qmd
+          - C2-L02.qmd
+          - C2-L03.qmd
+          - C2-L04.qmd
+          - C2-L04-Ex1.qmd
+          - C2-L05.qmd
+          - C2-L05-Ex1.qmd
+          - C2-L06.qmd
+          - C2-L06-Ex1.qmd
+          - C2-L06-Ex2.qmd
+          - C2-L07.qmd
+          - C2-L07-Ex1.qmd
+          - C2-L07-Ex2.qmd    
+          - C2-L08.qmd
+          - C2-L08-Ex1.qmd
+          - C2-L08-Ex2.qmd
+          - C2-L09.qmd    
+          - C2-L09-Ex1.qmd
+          - C2-L10.qmd
+          - C2-L10-Ex1.qmd
+          - C2-L11.qmd
+          - C2-L11-Ex1.qmd
+          - C2-L11-Ex2.qmd
+          - C2-L12.qmd
+          - C2-L12-Ex1.qmd 
+      - part: "3. Mixture Models"
+        chapters:
+          - C3-L01.qmd
+          - C3-L01-Ex1-Basic-Definitions.qmd
+          - C3-L01-Ex2-Gaussian-mixtures.qmd
+          - C3-L01-Ex3-Zero-Inflated-distribution.qmd
+          - C3-L01-Ex4-Def-mixture-models.qmd
+          - C3-L02.qmd
+          - C3-L02-Ex1.qmd
+          - C3-L02-Ex2.qmd 
+          - C3-L02-Ex3.qmd 
+          - C3-L02-Ex4.qmd 
+          - C3-L02-Ex5.qmd 
+          - C3-L02-Ex6.qmd 
+          - C3-L03.qmd
+          - C3-L03-Ex1.qmd # The EM algorithm for zero-inflated mixtures - nestsize.csv
+          - C3-L03-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
+          - C3-L04.qmd
+          - C3-L04-Ex1.qmd # The MCMC algorithm for zero-inflated mixtures - nestsize.csv
+          - C3-L04-Ex2.qmd # The MCMC algorithm for Mixture Models - fuses.csv          
+          - C3-L05.qmd
+          - C3-L06.qmd
+          - C3-L07.qmd
+          - C3-L07-Ex1.qmd
+          - C3-L07-Ex2.qmd
+          - C3-L07-Ex3.qmd         
+          - C3-L08.qmd
+          - C3-L08-Ex1.qmd
+          - C3-L09.qmd
+          - C3-L09-Ex1.qmd
+          - C3-L09-Ex2.qmd
+          - C3-L09-Ex3.qmd
+          - C3-L09-Ex4.qmd
+      - part: "4. Time series Models"
+        chapters:        
+          - C4-L00.qmd
+          - C4-L01.qmd
+          - C4-L02.qmd
+          - C4-L03.qmd
+          - C4-L04.qmd
+          - C4-L05.qmd
+          - C4-L05-Ex1.qmd
+          - C4-L05-Ex2.qmd
+          - C4-L06.qmd
+          - C4-L07.qmd
+          - C4-L08.qmd
+          - C4-L09.qmd
+          - C4-L10.qmd
+          - C4-L11.qmd
+      - part: "5. Capstone Project"
+        chapters:  
+          - C5-L01.qmd  
+          - C5-L01-Ex1.qmd
+          - C5-L01-Ex2.qmd
+          - C5-L02.qmd  
+          - C5-L03.qmd 
+  appendices:
       - A01.qmd
       - A02.qmd
       - A03.qmd
@@ -228,142 +249,6 @@ format:
     sidebar:
         style: "docked"
         search: true
-        contents:
-          - section: "Intro"
-            contents:
-            - about.qmd
-            - index.qmd
-            - intro.qmd
-          - section: "1. From Concept to Data Analysis"
-            contents:
-            - C1-L01.qmd
-            - C1-L01-Ex1.qmd
-            - C1-L02.qmd
-            - C1-L02-Ex1.qmd
-            - C1-L02-Ex2.qmd
-            - C1-L03.qmd
-            - C1-L03-Ex1.qmd
-            - C1-L03-Ex2.qmd    
-            - C1-L04.qmd
-            - C1-L04-Ex1.qmd
-            - C1-L05.qmd
-            - C1-L05-Ex1.qmd
-            - C1-L05-Ex2.qmd
-            - C1-L06.qmd
-            - C1-L06-Ex1.qmd
-            - C1-L07.qmd
-            - C1-L07-Ex1.qmd    
-            - C1-L08.qmd
-            - C1-L08-Ex1.qmd    
-            - C1-L08-Ex2.qmd
-            - C1-L09.qmd
-            - C1-L09-Ex1.qmd    
-            - C1-L10.qmd
-            - C1-L10-Ex1.qmd    
-            - C1-L11.qmd
-            - C1-L11-Ex1.qmd  
-            - C1-L12.qmd
-            - C1-L12-Ex1.qmd    
-            - C1-L12-Ex2.qmd
-          - section: "2. Techniques and Models"
-            contents:
-            - C2-L01.qmd
-            - C2-L02.qmd
-            - C2-L03.qmd
-            - C2-L04.qmd
-            - C2-L04-Ex1.qmd
-            - C2-L05.qmd
-            - C2-L05-Ex1.qmd
-            - C2-L06.qmd
-            - C2-L06-Ex1.qmd
-            - C2-L06-Ex2.qmd
-            - C2-L07.qmd
-            - C2-L07-Ex1.qmd
-            - C2-L07-Ex2.qmd    
-            - C2-L08.qmd
-            - C2-L08-Ex1.qmd
-            - C2-L08-Ex2.qmd
-            - C2-L09.qmd    
-            - C2-L09-Ex1.qmd
-            - C2-L10.qmd
-            - C2-L10-Ex1.qmd
-            - C2-L11.qmd
-            - C2-L11-Ex1.qmd
-            - C2-L11-Ex2.qmd
-            - C2-L12.qmd
-            - C2-L12-Ex1.qmd
-          - section: "3. Mixture Models"
-            contents:
-            - C3-L01.qmd
-            - C3-L01-Ex1-Basic-Definitions.qmd
-            - C3-L01-Ex2-Gaussian-mixtures.qmd
-            - C3-L01-Ex3-Zero-Inflated-distribution.qmd
-            - C3-L01-Ex4-Def-mixture-models.qmd
-            - C3-L02.qmd
-            - C3-L02-Ex1.qmd
-            - C3-L02-Ex2.qmd 
-            - C3-L02-Ex3.qmd 
-            - C3-L02-Ex4.qmd 
-            - C3-L02-Ex5.qmd 
-            - C3-L02-Ex6.qmd 
-            - C3-L03.qmd
-            - C3-L03-Ex1.qmd # The EM algorithm for zero-inflated mixtures - nestsize.csv
-            - C3-L03-Ex2.qmd # The EM algorithm for Mixture Models - fuses.csv
-            - C3-L04.qmd
-            - C3-L04-Ex1.qmd # The MCMC algorithm for zero-inflated mixtures - nestsize.csv
-            - C3-L04-Ex2.qmd # The MCMC algorithm for Mixture Models - fuses.csv          
-            - C3-L05.qmd
-            - C3-L06.qmd
-            - C3-L07.qmd
-            - C3-L07-Ex1.qmd
-            - C3-L07-Ex2.qmd
-            - C3-L07-Ex3.qmd         
-            - C3-L08.qmd
-            - C3-L08-Ex1.qmd        
-            - C3-L09.qmd
-            - C3-L09-Ex1.qmd
-            - C3-L09-Ex2.qmd
-            - C3-L09-Ex3.qmd
-            - C3-L09-Ex4.qmd
-
-          - section: "4. Time series Models"
-            contents:
-            - C4-L00.qmd
-            - C4-L01.qmd
-            - C4-L02.qmd
-            - C4-L03.qmd
-            - C4-L04.qmd
-            - C4-L05.qmd
-            - C4-L06.qmd
-            - C4-L07.qmd
-            - C4-L08.qmd
-            - C4-L09.qmd
-            - C4-L10.qmd
-            - C4-L11.qmd      
-          - section: "5. Capstone Project"
-            contents:
-            - C5-L01.qmd  
-            - C5-L01-Ex1.qmd
-            - C5-L01-Ex2.qmd
-            - C5-L02.qmd  
-            - C5-L03.qmd 
-          - section: "6. Appendices"
-            contents:
-            - A01.qmd
-            - A02.qmd
-            - A03.qmd
-            - A05.qmd
-            - A07.qmd    
-            - A08.qmd
-            - A09.qmd
-            - A10.qmd
-            - A11.qmd
-            - A12.qmd
-            - A13.qmd
-            - A14.qmd
-            - A15.qmd
-            - summary.qmd
-
 bibliography: references.bib
 
 profile:
