non-parametric modeling

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -134,6 +134,8 @@ book:
           - C5-L02.qmd  
           - C5-L03.qmd 
       - part: C6-L00.qmd 
+          - C6-L01.qmd
+          - C6-L02.qmd
       - part: C7-L00.qmd 
   appendices:
       - A01.qmd
