non-parametric modeling

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -160,6 +160,7 @@ book:
 
 format:
   pdf:
+    engine: xelatex  # or lualatex
     #mainfont: "Times New Roman"
     toc: true
     toc-depth: 3
@@ -170,6 +171,9 @@ format:
     sansfont: "Open Sans"
     monofont: "Roboto Mono"
     mathfont: "TeX Gyre Termes Math"
+    fallbackfonts:
+    - Noto Color Emoji
+
     from: "markdown+emoji"
     number-sections: true
     number-depth: 2
