--- a/_quarto.yml
+++ b/_quarto.yml
@@ -172,7 +172,7 @@ format:
     monofont: "Roboto Mono"
     mathfont: "TeX Gyre Termes Math"
     fallbackfonts:
-    - Noto Color Emoji
+    - "Noto Color Emoji"
 
     from: "markdown+emoji"
     number-sections: true
