--- a/_quarto.yml
+++ b/_quarto.yml
@@ -172,7 +172,12 @@ format:
     monofont: "Roboto Mono"
     mathfont: "TeX Gyre Termes Math"
     mainfontfallback:
-      - "NotoColorEmoji:mode=harf"
+      # - "NotoColorEmoji:mode=harf"
+      # - "Symbola:mode=harf"
+      # - "Segoe UI Symbol:mode=harf"
+      - "NotoColorEmoji"
+      - "Symbola"
+      - "Segoe UI Symbol"
 
 
     from: "markdown+emoji"
