--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,8 @@ project:
   preview:
     port: 4200
   output-dir: docs
+  execute-dir: project
+
   
 
 book:
@@ -276,5 +278,10 @@ crossref:
       key: vid
       latex-env: video
   
+knitr:
+  opts_chunk:
+    cache.path: _output/cache/
+
+
 execute:
   freeze: auto  # re-render only when source changes
