added all transcripts and some update to the _quarto.yml file

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,8 @@ book:
   chapters:
       - index.qmd
       #- intro.qmd
-      - part: C1-L00.qmd
+      # bayesian-statistics by Herbert Lee
+      - part: C1-L00.qmd     
         chapters:
           - C1-L01.qmd
           - C1-L01-Ex1.qmd
@@ -52,7 +53,8 @@ book:
           - C1-L12.qmd
           - C1-L12-Ex1.qmd    
           - C1-L12-Ex2.qmd
-      - part: C2-L00.qmd
+      # mcmc-bayesian-statistics by Matthew Heiner
+      - part: C2-L00.qmd       # mcmc-bayesian-statistics
         chapters:
           - C2-L01.qmd
           - C2-L02.qmd
@@ -79,7 +81,8 @@ book:
           - C2-L11-Ex2.qmd
           - C2-L12.qmd
           - C2-L12-Ex1.qmd 
-      - part: C3-L00.qmd
+      # mixture-models by Abel Rodriguez
+      - part: C3-L00.qmd      # mixture-models
         chapters:
           - C3-L01.qmd
           - C3-L01-Ex1-Basic-Definitions.qmd
@@ -112,25 +115,30 @@ book:
           - C3-L09-Ex2.qmd
           - C3-L09-Ex3.qmd
           - C3-L09-Ex4.qmd
-      #- part: "Time series Models"
-      - part: C4-L00.qmd
+      # bayesian-statistics-time-series-analysis By Raquel Prado
+      - part: C4-L00.qmd    # introduction to the bayesian-statistics-time-series-analysis
         chapters:          
-          - C4-L01.qmd
-          - C4-L02.qmd
-          - C4-L03.qmd
-          - C4-L04.qmd
-          - C4-L05.qmd
-          - C4-L05-Ex1.qmd
-          - C4-L05-Ex2.qmd
-          - C4-L06.qmd
-          - C4-L07.qmd
-          - C4-L08.qmd
-          - C4-L09.qmd
-          - C4-L09-Ex1.qmd
-          - C4-L10.qmd
-          - C4-L11.qmd
-      - part: C5-L00.qmd 
-        chapters:  
+          # 01_week-1-introduction-to-time-series-and-the-ar-1-process
+          - C4-L01.qmd      # 02_stationarity-the-acf-and-the-pacf
+          - C4-L02.qmd      # 03_the-ar-1-process-definition-and-properties
+          - C4-L03.qmd      # 04_the-ar-1-maximum-likelihood-estimation-and-bayesian-inference
+          # 02_week-2-the-ar-p-process
+          - C4-L04.qmd      # 01_the-general-ar-p-process
+          - C4-L05.qmd      # 02_bayesian-inference-in-the-ar-p
+          - C4-L05-Ex1.qmd  # Exercise 1
+          - C4-L05-Ex2.qmd  # Exercise 2
+          # 3 03_week-3-normal-dynamic-linear-models-part-i
+          - C4-L06.qmd      # 01_the-normal-dynamic-linear-model-definition-model-classes-and-the-superposition 
+          - C4-L07.qmd      # 02_bayesian-inference-in-the-ndlm-part-i 
+          # 04_week-4-normal-dynamic-linear-models-part-ii
+          - C4-L08.qmd      # 01_seasonal-ndlms
+          - C4-L09.qmd      # 02_bayesian-inference-in-the-ndlm-part-ii
+          - C4-L09-Ex1.qmd  # Exercise 1
+          - C4-L10.qmd      #  capstone-project
+          # - C4-L11.qmd    # A Feynman Notebook
+      # bayesian-statistics-capstone by Jizhou Kang
+      - part: C5-L00.qmd
+        chapters:
           - C5-L01.qmd  
           - C5-L01-Ex1.qmd
           - C5-L01-Ex2.qmd
@@ -141,6 +149,7 @@ book:
           - C5-L03.1.qmd 
           - C5-L03.2.qmd 
           - C5-L03.3.qmd 
+      # bayesian-nonparametrics by Tilda 
       - part: C6-L00.qmd 
         chapters:  
           - C6-L01.qmd
